--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,9 +8,18 @@
 	</head>
 	<body>
 		<div>
-			Microblog: <a href="/index">Home</a> | <a href="/login">Login</a>
+			Microblog: <a href="{{url_for('index')}}">Home</a> | <a href="{{url_for('login') }}">Login</a>
 		</div>
 		<hr>
+		{% with messages = get_flashed_messages() %}
+			{% if messages %}
+			<ul>
+			{% for message in messages %}
+				<li>{{ message }} </li>
+			{% endfor %}
+			<hr>
+			{% endif %}
+		{% endwith %}
 		{% block content %}{% endblock %}
 	</body>
 </html>
