--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,11 +5,18 @@
 			{{form.hidden_tag()}}
 			<p>
 			{{ form.username.label }} <br>
-			{{ form.username(size=32) }}
+			{{ form.username(size=32) }}<br>
+			{% for error in form.username.errors %}
+				<span style="color: red;">[{{ error + 'one' }}]</span>
+			{% endfor %}
 			</p>
 			<p>
 			{{ form.password.label }} <br>
 			{{ form.password(size=32) }}
+			<br>
+			{% for error in form.password.errors %}
+				<span style="color: red;">[{{ error + 'two' }}]</span>
+			{% endfor %}
 			</p>
 			<p>
 			{{ form.remember_me() }} {{ form.remember_me.label }}
