--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -24,5 +24,6 @@
 			<p>
 			{{ form.submit() }} 
 			</p>
+            <p>New User? <a href="{{url_for('register')}}">Click to register!</a></p>
 	</form>
 {% endblock %}
