--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,8 @@
             {% else %}
             | <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
             | <a href="{{url_for('logout') }}">Logout</a>
-            {% endif %}
+			{% endif %}
+			| <a href="{{url_for('explore') }}">Explore</a>
             
 		</div>
 		<hr>
