--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 	<h1>Hi, {{current_user.username}}!</h1>
+	{% for post in posts %}
+	{% include "_post.html" %}
+	{% endfor %}
+	<p>
+		{% if prev_url %}<a href="{{prev_url}}">Newer posts</a>{% endif %}
+		{% if next_url %}<a href="{{next_url}}">Older posts</a>{% endif %}
+	</p>
+	{% if form %}
 	<form action="" method="post">
 		{{form.hidden_tag()}}
 		<p>
@@ -12,7 +20,5 @@
 		</p>
 		<p>{{form.submit()}}</p>
 	</form>
-	{% for post in posts %}
-	{% include "_post.html" %}
-	{% endfor %}
+	{% endif %}
 {% endblock %}
