--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -27,4 +27,8 @@
     {% for post in posts %}
         {% include "_post.html" %}
     {% endfor %}
+    <p>
+		{% if prev_url %}<a href="{{prev_url}}">Newer posts</a>{% endif %}
+		{% if next_url %}<a href="{{next_url}}">Older posts</a>{% endif %}
+	</p>
 {% endblock %}
