--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -25,6 +25,6 @@
 			{{ form.submit() }} 
 			</p>
 			<p>New User? <a href="{{url_for('register')}}">Click to register!</a></p>
-			<p>Forgot your password? <a href="{{url_for('reset_password_request'}}">Click to reset it</a></p>
+			<p>Forgot your password? <a href="{{url_for('reset_password_request')}}">Click to reset it</a></p>
 	</form>
 {% endblock %}
