--- a/app/templates/reset_password_request.html
+++ b/app/templates/reset_password_request.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>Reset Password</h1>
-    <form action="" method="POST">
+    <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
             {{ form.email.label}}<br>
