--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block content %}
+{% block app_content %}
     <h1>An unexpected error has occurred</h1>
-    <p>The administor has been notified</p>
-    <p><a href="{{url_for('index')}}">Back</a></p>
+    <p>The administrator has been notified. Sorry for the inconvenience!</p>
+    <p><a href="{{ url_for('index') }}">Back</a></p>
 {% endblock %}
